--- a/truths.html
+++ b/truths.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Maureen's Two truths and a lie</h1>
         <ol>
-            <li> I was <a href="https://en.wikipedia.org/wiki/Born"target="_blank">born</a> in michigan <br> <img src="http://content.sportslogos.net/logos/32/750/full/8079_michigan_wolverines-primary-1961.png"alt="michigan"></li> 
+            <li> I play <a href="http://virtualpiano.net"target="_blank">play</a> piano for 6years<br> <img src="http://cdn.roland.com/products/v-piano_grand/features/images/cabinet_hero.jpg"alt="michigan"></li> 
             <li> I <a href="https://en.wikipedia.org/wiki/Ownership"target="_blank">own</a> two dogs <br> <img src="https://www.pets4homes.co.uk/images/articles/1873/large/can-two-un-neutered-male-dogs-live-happily-together-without-fighting-53c7cb0733ead.jpg"alt="dogs">
             </li>
             <li>I <a href="https://en.wikipedia.org/wiki/Travel"target="_blank">travel</a> outaise the US at least once every year <br> <img src="http://az616578.vo.msecnd.net/files/2016/06/04/6360066808291721731600227166_Dollarphotoclub_65482539.jpg" alt="travel"></li>
