--- a/jokes.html
+++ b/jokes.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css"href="jokestyle.css">
         <title>jQuery Puns</title>
     </head>
     <body>
+       
     <h1>ScriptEd Pun-A-Thon</h1>
     <hr>
     <div id="joke-1"> What kind of cheese doesn't belong to you?
@@ -17,5 +19,8 @@
     </div>
     <hr>
         <img id="joke-4" src="https://s16.postimg.org/5fso4wcmd/t_WNHJEV.jpghttps://s16.postimg.org/5mu1wwjx1/ZCIkkze.jpg">
-</body>
+        <script type="text/javascript"
+                src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="jokejava.js"></script>
+    </body>
 </html>
