--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Maureen's World</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
     
