--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <input id="inputbox">
     <button id="guess_button"> Guess! </button>
     <p> </p>
-        
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="about.js"></script>
     </body>
 </html>
