--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     
-    <div class = "circle"> <a href="" target="_blank"> <h1>About Me</h1> </a></div>
+    <div class = "circle"> <a href="about.html" target="_blank"> <h1>About Me</h1> </a></div>
         <br>
         <br>
         <br>
