--- a/about.html
+++ b/about.html
@@ -10,5 +10,13 @@
     <p> </p>
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script type="text/javascript" src="about.js"></script>
+        
+        <h1> What's my favorite movie? </h1>
+    <input type="radio" name="movie" id="A" value="Fast & Furious 5"> Fast & Furious 5 <br>
+    <input type="radio" name="movie" id="B" value="The Lion King"> The Lion King  <br>
+    <input type="radio" name="movie" id="C" value="White Chicks"> White Chicks <br>
+    <input type="radio" name="movie" id="D" value="Divergent"> Divergent <br>
+    <button id="submit"> Sumbit! </button>
+    <p> </p>
     </body>
 </html>
