--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>About ME!</title>
     </head>
     <body>
     <h1> Guess my favorite Number! </h1>
