--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>About Me!</title>
+        <link rel="stylesheet" href="about.css">
     </head>
     <body>
     <h1> Guess my favorite Number! </h1>
